--- a/Stylesheets.css
+++ b/Stylesheets.css
@@ -10,7 +10,7 @@ body {
     position: fixed;
     left: 0;
     width: 100%;
-    top: 50px;
+    top: 5%;
     text-align: center;
     border: black solid 1px;
     display: block;
@@ -20,9 +20,8 @@ body {
 input[type="text"] {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 10px;
-    height: 55px;
-    width: 55px;
-    border: none;
+    height: 20%;
+    width: 20%;
     border-radius: 5px;
     text-align: center;
     font-size: 30px;
@@ -34,7 +33,9 @@ input[type="text"] {
 
 /* buttons */
 
-.btnContainer {}
+.btnContainer {
+
+}
 
 .submitBtn {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -42,7 +43,7 @@ input[type="text"] {
     margin-right: auto;
     position: fixed;
     bottom: 12%;
-    left: 0;
+    left: 0%;
     right: 0;
     width: 150px;
     font-size: 250%;
@@ -73,9 +74,9 @@ input[type="text"] {
     border: black solid 3px;
     transition: 0.25s ease-in-out;
     position: fixed;
-    bottom: 1%;
-    left: 0;
-    right: 0;
+    bottom: 5%;
+    left: 0%;
+    right: 0%;
     font-weight: bold;
 }
 
@@ -119,16 +120,20 @@ input[type="text"] {
     padding-bottom: 125px;
     font-weight: 500;
     font-size: 25px;
+    display: block;
 }
 
 /* middle section */
 .middleContainer {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
-
     font-size: 165%;
     font-weight: 500;
     color: white;
+    position: fixed;
+    left: 50%;
+    right: 50%;
+    display: contents;   
 }
 
 
@@ -137,12 +142,14 @@ input[type="text"] {
 
 .Keyboard {
     position: fixed;
-    bottom: 200px;
+    bottom: 22%;
     left: 50%;
     transform: translateX(-50%);
-    padding: 30px;
+    padding: 1%;
     border: 3px solid black;
     margin-top: 5px;
+    background-color: (92, 92, 92);
+    display: block;
 }
 
 .Row {
@@ -153,11 +160,10 @@ input[type="text"] {
 .Key {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 150%;
-    width: 70px;
+    width: 80px;
     height: 60px;
     background-color: rgb(63, 63, 63);
     border: 1px solid rgb(0, 0, 0);
-    display: flex;
     justify-content: center;
     align-items: center;
     font-weight: bold;
@@ -166,19 +172,25 @@ input[type="text"] {
     color: rgb(227, 227, 227);
 }
 
-.Key:hover {
-    background-color: rgb(87, 87, 87);
+.Key :hover {
+    background-color: rgb(31, 31, 31);
+    transform: 110%;
 }
 
 /* HELP BOX */
 
-.helpBox {
+.help{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 1px;
+    margin: 10px;
     padding: 1px;
-    width: 400px;
-    height: 400px;
-    border: 1px black solid;
+    width: 20%;
+
+    border: 3px black solid;
     align-items: center;
     text-align: center;
+    top: 5%;
+    position: fixed;
+    background-color: rgb(92, 92, 92);
+    display: block;
+    border-radius: 5px;
 }
